package learn.design.pattern.structural.adapter;

/**
 * Target 为要适配的目标
 */
public interface Target {

    void f1();

    void f2();

    void f();
}
